--- a/SalomeGHS3DPLUGINConfig.cmake.in
+++ b/SalomeGHS3DPLUGINConfig.cmake.in
@@ -43,12 +43,17 @@ SET_AND_CHECK(GHS3DPLUGIN_ROOT_DIR_EXP "@PACKAGE_CMAKE_INSTALL_PREFIX@")
 
 # Include directories
 SET_AND_CHECK(GHS3DPLUGIN_INCLUDE_DIRS "${GHS3DPLUGIN_ROOT_DIR_EXP}/@SALOME_INSTALL_HEADERS@")
+SET(GHS3DPLUGIN_INCLUDE_DIRS "${GHS3DPLUGIN_INCLUDE_DIRS};@_SalomeGHS3DPLUGIN_EXTRA_HEADERS@")
+SET(GHS3DPLUGIN_DEFINITIONS "@SMESH_DEFINITIONS@")
 
 #### Now the specificities
 
 # Options exported by the package:
-#SET(SALOME_BUILD_TESTS @SALOME_BUILD_TESTS@)
-SET(SALOME_BUILD_DOC   @SALOME_BUILD_DOC@)
+#SET(SALOME_GHS3DPLUGIN_BUILD_TESTS @SALOME_BUILD_TESTS@)
+SET(SALOME_GHS3DPLUGIN_BUILD_DOC   @SALOME_BUILD_DOC@)
+
+# Advanced options
+SET(SALOME_GHS3DPLUGIN_BUILD_GUI  @SALOME_BUILD_GUI@)
 
 # Level 1 prerequisites:
 SET_AND_CHECK(SMESH_ROOT_DIR_EXP "@PACKAGE_SMESH_ROOT_DIR@")
