CMake: - Accumulate environment variables, to be used later to run some command in proper environment.

--- a/SalomeGHS3DPLUGINConfig.cmake.in
+++ b/SalomeGHS3DPLUGINConfig.cmake.in
@@ -46,6 +46,9 @@ SET_AND_CHECK(GHS3DPLUGIN_INCLUDE_DIRS "${GHS3DPLUGIN_ROOT_DIR_EXP}/@SALOME_INST
 SET(GHS3DPLUGIN_INCLUDE_DIRS "${GHS3DPLUGIN_INCLUDE_DIRS};@_SalomeGHS3DPLUGIN_EXTRA_HEADERS@")
 SET(GHS3DPLUGIN_DEFINITIONS "@SMESH_DEFINITIONS@")
 
+# Package specific environment variables
+@_SalomeGHS3DPLUGIN_EXTRA_ENV_FULL@
+
 #### Now the specificities
 
 # Options exported by the package:
