--- a/SalomeGHS3DPLUGINConfig.cmake.in
+++ b/SalomeGHS3DPLUGINConfig.cmake.in
@@ -52,7 +52,7 @@ SET(GHS3DPLUGIN_DEFINITIONS "@SMESH_DEFINITIONS@")
 #### Now the specificities
 
 # Options exported by the package:
-#SET(SALOME_GHS3DPLUGIN_BUILD_TESTS @SALOME_BUILD_TESTS@)
+SET(SALOME_GHS3DPLUGIN_BUILD_TESTS @SALOME_BUILD_TESTS@)
 SET(SALOME_GHS3DPLUGIN_BUILD_DOC   @SALOME_BUILD_DOC@)
 
 # Advanced options
