--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,12 @@ IF(EXISTS ${SMESH_ROOT_DIR})
       MESSAGE(FATAL_ERROR "We absolutely need a Salome SMESH with GUI, please set SALOME_BUILD_GUI=ON in SMESH module")
     ENDIF(NOT SALOME_SMESH_BUILD_GUI)
   ENDIF(SALOME_BUILD_GUI)
+  IF(SALOME_BUILD_DOC)
+    IF(NOT SALOME_SMESH_BUILD_DOC)
+      MESSAGE(FATAL_ERROR "We absolutely need a Salome SMESH documentation to build GHS3DPLUGIN documentation. "
+			  "So, you should either set SALOME_BUILD_DOC=OFF in GHS3DPLUGIN or set SALOME_BUILD_DOC=ON in SMESH module.")
+    ENDIF(NOT SALOME_SMESH_BUILD_DOC)
+  ENDIF(SALOME_BUILD_DOC)
 ELSE(EXISTS ${SMESH_ROOT_DIR})
   MESSAGE(FATAL_ERROR "We absolutely need a Salome SMESH, please define SMESH_ROOT_DIR")
 ENDIF(EXISTS ${SMESH_ROOT_DIR})
