--- a/doc/salome/gui/GHS3DPLUGIN/doxyfile_py.in
+++ b/doc/salome/gui/GHS3DPLUGIN/doxyfile_py.in
@@ -20,7 +20,7 @@
 #---------------------------------------------------------------------------
 # Project related configuration options
 #---------------------------------------------------------------------------
-PROJECT_NAME           = "SALOME GHS3DPLUGIN User's Guide"
+PROJECT_NAME           = "SALOME MG_Tetra plug-in User's Guide"
 OUTPUT_DIRECTORY       = GHS3DPLUGIN
 CREATE_SUBDIRS	       = NO
 OUTPUT_LANGUAGE        = English
