CMake: simplifying Python detection mechanism.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,8 @@ OPTION(SALOME_BUILD_GUI "Enable GUI" ON)
 
 # Various
 # Python
-FIND_PACKAGE(SalomePython REQUIRED)
+FIND_PACKAGE(SalomePythonInterp REQUIRED)
+FIND_PACKAGE(SalomePythonLibs REQUIRED)
 # Boost
 FIND_PACKAGE(SalomeBoost REQUIRED)
 # CORBA
