--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ SET(BUILD_SHARED_LIBS TRUE)
 # ============
 OPTION(SALOME_BUILD_TESTS "Build SALOME tests" ON)
 OPTION(SALOME_BUILD_DOC "Generate SALOME GHS3DPLUGIN documentation" ON)
+OPTION(SALOME_USE_MG_LIBS "Use MeshGems libraries" ON)
 
 IF(SALOME_BUILD_TESTS)
   ENABLE_TESTING()
@@ -76,6 +77,8 @@ ENDIF()
 
 # Advanced options:
 OPTION(SALOME_BUILD_GUI "Enable GUI" ON)
+
+MARK_AS_ADVANCED(SALOME_USE_MG_LIBS)
 
 ##
 ## From KERNEL:
@@ -165,6 +168,15 @@ ELSE(EXISTS ${SMESH_ROOT_DIR})
   MESSAGE(FATAL_ERROR "We absolutely need a Salome SMESH, please define SMESH_ROOT_DIR")
 ENDIF(EXISTS ${SMESH_ROOT_DIR})
 
+##
+## Find MESHGEMS
+## =============
+IF(SALOME_USE_MG_LIBS)
+  FIND_PACKAGE(SalomeMESHGEMS)
+  SALOME_LOG_OPTIONAL_PACKAGE(MESHGEMS SALOME_USE_MG_LIBS)
+  ADD_DEFINITIONS(-DUSE_MG_LIBS)
+ENDIF(SALOME_USE_MG_LIBS)
+
 # Detection summary:
 SALOME_PACKAGE_REPORT_AND_CHECK()
 
@@ -253,17 +265,18 @@ EXPORT(TARGETS ${_${PROJECT_NAME}_exposed_targets}
 
 # Ensure the variables are always defined for the configure:
 SET(SMESH_ROOT_DIR "${SMESH_ROOT_DIR}")
+SET(MESHGEMS_ROOT_DIR "${MESHGEMS_ROOT_DIR}")
  
 SET(CONF_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include" "${PROJECT_BINARY_DIR}/include")
 
 # Build variables that will be expanded when configuring Salome<MODULE>Config.cmake:
-# SALOME_CONFIGURE_PREPARE() #For use in the future
+SALOME_CONFIGURE_PREPARE(MESHGEMS)
 
 CONFIGURE_PACKAGE_CONFIG_FILE(${PROJECT_NAME}Config.cmake.in 
     ${PROJECT_BINARY_DIR}/${PROJECT_NAME}Config.cmake
     INSTALL_DESTINATION "${SALOME_INSTALL_CMAKE_LOCAL}"
     PATH_VARS CONF_INCLUDE_DIRS SALOME_INSTALL_CMAKE_LOCAL CMAKE_INSTALL_PREFIX
-    SMESH_ROOT_DIR)
+    SMESH_ROOT_DIR MESHGEMS_ROOT_DIR)
 
 WRITE_BASIC_PACKAGE_VERSION_FILE(${PROJECT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake
     VERSION ${${PROJECT_NAME_UC}_VERSION}
