According to CoTech84 decision use MeshGems executables by default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,7 @@ SET(BUILD_SHARED_LIBS TRUE)
 # ============
 OPTION(SALOME_BUILD_TESTS "Build SALOME tests" ON)
 OPTION(SALOME_BUILD_DOC "Generate SALOME GHS3DPLUGIN documentation" ON)
-OPTION(SALOME_USE_MG_LIBS "Use MeshGems libraries" ON)
+OPTION(SALOME_USE_MG_LIBS "Use MeshGems libraries" OFF)
 
 IF(SALOME_BUILD_TESTS)
   ENABLE_TESTING()
