--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,7 +129,7 @@ IF(SALOME_BUILD_GUI)
   ENDIF()
 ENDIF(SALOME_BUILD_GUI)
 # OCCT
-FIND_PACKAGE(SalomeCAS REQUIRED)
+FIND_PACKAGE(SalomeOpenCASCADE REQUIRED)
 # VTK
 FIND_PACKAGE(SalomeVTK REQUIRED)
 
