--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -23,7 +23,7 @@ INCLUDE(UseQtExt)
 # additional include directories
 INCLUDE_DIRECTORIES(
   ${QT_INCLUDES}
-  ${CAS_INCLUDE_DIRS}
+  ${OpenCASCADE_INCLUDE_DIR}
   ${KERNEL_INCLUDE_DIRS}
   ${GUI_INCLUDE_DIRS}
   ${GEOM_INCLUDE_DIRS}
@@ -39,7 +39,7 @@ INCLUDE_DIRECTORIES(
 ADD_DEFINITIONS(
   ${QT_DEFINITIONS}
   ${OMNIORB_DEFINITIONS}
-  ${CAS_DEFINITIONS}
+  ${OpenCASCADE_DEFINITIONS}
   ${BOOST_DEFINITIONS}
 )
 
@@ -55,7 +55,7 @@ SET(_link_LIBRARIES
   ${GUI_suit}
   ${GUI_qtx}
   ${GUI_SalomeApp}
-  ${CAS_KERNEL}
+  ${OpenCASCADE_FoundationClasses_LIBRARIES}
   SalomeIDLGHS3DPLUGIN
 )
 
