Modification according to SMESH_Gen changes

--- a/src/GHS3DPlugin/CMakeLists.txt
+++ b/src/GHS3DPlugin/CMakeLists.txt
@@ -102,7 +102,7 @@ SET(_bin_SCRIPTS
 
 # --- rules ---
 
-ADD_LIBRARY(GHS3DEngine ${GHS3DEngine_SOURCES})
+ADD_LIBRARY(GHS3DEngine ${GHS3DEngine_SOURCES} ${GHS3DEngine_HEADERS})
 TARGET_LINK_LIBRARIES(GHS3DEngine ${_link_LIBRARIES} )
 INSTALL(TARGETS GHS3DEngine EXPORT ${PROJECT_NAME}TargetGroup DESTINATION ${SALOME_INSTALL_LIBS})
 
