--- a/src/GHS3DPlugin/CMakeLists.txt
+++ b/src/GHS3DPlugin/CMakeLists.txt
@@ -25,6 +25,7 @@ INCLUDE_DIRECTORIES(
   ${GEOM_INCLUDE_DIRS}
   ${SMESH_INCLUDE_DIRS}
   ${MESHGEMS_INCLUDE_DIRS}
+  ${MEDCOUPLING_INCLUDE_DIRS}
   ${Boost_INCLUDE_DIRS}
   ${OMNIORB_INCLUDE_DIR}
   ${PROJECT_BINARY_DIR}/idl
