--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -28,6 +28,7 @@ INCLUDE_DIRECTORIES(
   ${GUI_INCLUDE_DIRS}
   ${GEOM_INCLUDE_DIRS}
   ${SMESH_INCLUDE_DIRS}
+  ${MEDCOUPLING_INCLUDE_DIRS}
   ${Boost_INCLUDE_DIRS}
   ${OMNIORB_INCLUDE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}
