Available in GUI of SSL mode

--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -32,3 +32,4 @@ SET(GHS3DPLUGIN_RESOURCES_FILES
 
 
 INSTALL(FILES ${GHS3DPLUGIN_RESOURCES_FILES} DESTINATION ${SALOME_GHS3DPLUGIN_INSTALL_RES_DATA})
+INSTALL(FILES SalomeApp.xml RENAME SalomeAppSL.xml DESTINATION ${SALOME_GHS3DPLUGIN_INSTALL_RES_DATA})
