--- a/bin/VERSION.in
+++ b/bin/VERSION.in
@@ -1,3 +1,4 @@
 [SALOME GHS3DPLUGIN] : @SALOMEGHS3DPLUGIN_VERSION@
 [DEVELOPMENT]        : @SALOMEGHS3DPLUGIN_VERSION_DEV@
+[SHA1]               : @SALOMEGHS3DPLUGIN_GIT_SHA1@
 [DESCRIPTION]        : DISTENE TetGen-GHS3d meshing plug-in for SALOME Mesh module
